# facmod-rs

./: Cargo.toml
src/: cli.rs  errors.rs  main.rs  util.rs
