[package]
name = "facmod-rs"
description = "Download mods for Factorio"
authors = ["Nathaniel Graham <@ngraham20, @raevenant>", "Alyexe"]
version = "0.7.1-beta"
license-file = "LICENSE"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["json", "stream"]}
futures-util = "0.3.26"
indicatif = "0.17.3"
serde_json = "1.0.93"
serde_yaml = "0.9.17"
error-chain = "0.12.4"
tokio = {version = "1.25.0", features = ["full"]}
log = "0.4.17"
env_logger = "0.10.0"
serde = {version = "1.0.152", features = ["derive"]}
clap = { version = "4.1.4", features = ["cargo", "help", "usage", "error-context", "wrap_help"] }
